# todo-fastapi-practice

./: .gitignore  EXERCISES.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
app/routers/: __init__.py  todos.py
app/static/: index.html
tests/: __init__.py  test_todos.py
